# ChangeLog for dev-ruby/calendar_helper
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calendar_helper-0.2.5 (09 May 2013)

  09 May 2013; Hans de Graaff <graaff@gentoo.org>
  +calendar_helper-0.2.5.ebuild:
  Version bump.

  23 Apr 2012; Hans de Graaff <graaff@gentoo.org>
  calendar_helper-0.2.4-r1.ebuild:
  Add ruby19.

*calendar_helper-0.2.4-r1 (09 Jun 2011)

  09 Jun 2011; Hans de Graaff <graaff@gentoo.org>
  +calendar_helper-0.2.4-r1.ebuild:
  Add mandatory summary attribute to generated table. Keeps tidy quiet on the
  generated code.

*calendar_helper-0.2.4 (09 Jun 2011)

  09 Jun 2011; Hans de Graaff <graaff@gentoo.org>
  +calendar_helper-0.2.4.ebuild:
  Version bump.

  30 Jun 2010; Hans de Graaff <graaff@gentoo.org>
  calendar_helper-0.2.3.ebuild:
  Also install the additional files.

  30 Jun 2010; Hans de Graaff <graaff@gentoo.org>
  calendar_helper-0.2.3.ebuild:
  Clean up ebuild.

*calendar_helper-0.2.3 (30 Jun 2010)

  30 Jun 2010; Hans de Graaff <graaff@gentoo.org>
  +calendar_helper-0.2.3.ebuild, +metadata.xml:
  Initial import.
