@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Sep 2013; Hans de Graaff <graaff@gentoo.org>
+  -calendar_helper-0.2.3.ebuild, -calendar_helper-0.2.4.ebuild:
+  Cleanup.
+
 *calendar_helper-0.2.5 (09 May 2013)
 
   09 May 2013; Hans de Graaff <graaff@gentoo.org>
